created first webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World</title> <!--This is visible in tabs and bookmark bar of website-->
+</head>
+<body> <!-- Everything that we want visible on the website goes in the Body. If it's not in the Body, it's not visible-->
+    <h1>Hello World</h1> 
+</body>
+</html>
