Created first website

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body> <!-- Everything that we want visible on the website goes in the Body. If it's not in the Body, it's not visible-->
     <h1>Hello World</h1> 
+    <p> This is my first website</p>
 </body>
 </html>
