new line for real time update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body> <!-- Everything that we want visible on the website goes in the Body. If it's not in the Body, it's not visible-->
     <h1>Hello World</h1> 
-    <p> This is my first website</p>
+    <p> This is my first website.</p>
+    <p> This is my first wensite modification.</p>
 </body>
 </html>
